--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.9",
+    "@material-ui/core": "^4.11.3",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-apollo": "^3.0.2",
+    "gatsby-plugin-create-client-paths": "^2.5.0",
+    "netlify-identity-widget": "^1.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
