--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,7 +32,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Build the site
-      run: npm run build
+      run: gatsby build
       env:
           FAUNADB_SECRET_KEY: ${{secrets.FAUNADB_SECRET}}
 
